// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-document-type-allowed-children should get allowed children for a document type 1`] = `
{
  "content": [
    {
      "text": "{"total":1,"items":[{"id":"00000000-0000-0000-0000-000000000000","name":"_Test Child DocumentType","description":null,"icon":"icon-document"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-document-type-allowed-children should handle document type with no allowed children 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-document-type-allowed-children should handle non-existent document type 1`] = `
{
  "content": [
    {
      "text": "Error using get-document-type-allowed-children:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "Not Found",
    "status": 404,
    "detail": "The specified document type was not found",
    "operationStatus": "NotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;
